--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <div class="content">
+        <div class="image-section">
+            <div class="banner">
+                <img src="./odin-lined.png" alt="Odin's face"/> ODIN
+            </div>
+            <p class="attribution">
+                Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Halie West </a>
+                on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash </a>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
