Edit index.html add main text

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
                 on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash </a>
             </p>
         </div>
+        <div class="text-section">
+            <p>
+                This is not a real online service! You now you need something like this in your life to help ou realize your deepest dreams.
+                Sign up <em>now</em> to get started.
+            </p>
+            <p>
+                You <em>know</em> you want to.
+            </p>
+            <form>
+                <div class="inputs-section">
+                    <h3>
+                       Let's do this!
+                    </h3>
+                    <div class="imputs">
+
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
