Edit index.html add form top section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
                        Let's do this!
                     </h3>
                     <div class="imputs">
-
+                        <div class="top-section">
+                            <div class="top-section-first">
+                                <label for="first-name">FIRST NAME</label>
+                                <input type="text" id="first-name" name="first-name" />
+                            </div>
+                            <div class="top-section-second">
+                                <label for="last-name">LAST NAME</label>
+                                <input type="text" class="focus" id="last-name" name="last-name" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
