--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                                 <input type="text" class="focus" id="last-name" name="last-name" />
                             </div>
                         </div>
+                        <div class="middle-section">
+                            <div class="middle-section-first">
+                                <label for="email">EMAIL</label>
+                                <input type="email" id="email" name="email" />
+                            </div>
+                            <div class="middle-section-second">
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <input type="tel" id="phone-number" name="phone-number" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
