Edit index.html bottom section and style.css main style

--- a/index.html
+++ b/index.html
@@ -51,9 +51,22 @@
                                 <input type="tel" id="phone-number" name="phone-number" />
                             </div>
                         </div>
+                        <div class="bottom-section">
+                            <div class="bottom-section-first">
+                                <label for="password">PASSWORD</label>
+                                <input type="password" class="error" id="password" name="password" />
+                                <p class="error message">*Passwords do not match!</p>
+                            </div>
+                            <div class="bottom-section-second">
+                                <label for="confirm-password">CONFIRM PASSWORD</label>
+                                <input type="password" class="error" id="confirm-password" name="confirm-password" />
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <button type="submit" id="create-account">Create Account</button>
             </form>
+            <p class="log-in">Already have an account? <a href="#">Log In</a></p>
         </div>
     </div>
 </body>
