--- a/index.html
+++ b/index.html
@@ -18,48 +18,43 @@
             </p>
         </div>
         <div class="text-section">
-            <p>
-                This is not a real online service! You now you need something like this in your life to help ou realize your deepest dreams.
+            <p> This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
                 Sign up <em>now</em> to get started.
             </p>
-            <p>
-                You <em>know</em> you want to.
-            </p>
+            <p>You <em>know</em> you want to.</p>
             <form>
                 <div class="inputs-section">
-                    <h3>
-                       Let's do this!
-                    </h3>
-                    <div class="imputs">
-                        <div class="top-section">
-                            <div class="top-section-first">
+                <h3>Let's do this!</h3>
+                    <div class="inputs">
+                        <div>
+                            <div>
                                 <label for="first-name">FIRST NAME</label>
-                                <input type="text" id="first-name" name="first-name" />
+                                <input type="text" id="first-name" name="first-name"/>
                             </div>
-                            <div class="top-section-second">
+                            <div>
                                 <label for="last-name">LAST NAME</label>
-                                <input type="text" class="focus" id="last-name" name="last-name" />
+                                <input type="text" class="focus" id="last-name" name="last-name"/>
                             </div>
                         </div>
-                        <div class="middle-section">
-                            <div class="middle-section-first">
+                        <div>
+                            <div>
                                 <label for="email">EMAIL</label>
-                                <input type="email" id="email" name="email" />
+                                <input type="email" id="email" name="email"/>
                             </div>
-                            <div class="middle-section-second">
+                            <div>
                                 <label for="phone-number">PHONE NUMBER</label>
-                                <input type="tel" id="phone-number" name="phone-number" />
+                                <input type="tel" id="phone-number" name="phone-number"/>
                             </div>
                         </div>
-                        <div class="bottom-section">
-                            <div class="bottom-section-first">
+                        <div>
+                            <div>
                                 <label for="password">PASSWORD</label>
-                                <input type="password" class="error" id="password" name="password" />
-                                <p class="error message">*Passwords do not match!</p>
+                                <input type="password" class="error" id="password" name="password"/>
+                                <p class="error-message">*Passwords do not match</p>
                             </div>
-                            <div class="bottom-section-second">
+                            <div>
                                 <label for="confirm-password">CONFIRM PASSWORD</label>
-                                <input type="password" class="error" id="confirm-password" name="confirm-password" />
+                                <input type="password" class="error" id="confirm-password" name="confirm-password"/>
                             </div>
                         </div>
                     </div>
